fix: group/token names broken on empty input

--- a/src/styles/common/_input.scss
+++ b/src/styles/common/_input.scss
@@ -1,8 +1,9 @@
-input[type='checkbox'] {
+input[type="checkbox"] {
   display: none;
 }
 
-input[type='number'] {
+input[type="number"],
+input[type="text"] {
   border: none;
   border-radius: 5%;
   background-color: transparent;
@@ -11,8 +12,9 @@ input[type='number'] {
   text-align: center;
 }
 
-input[type='number']:focus {
-  background-color: rgba(map-get($colors, contrast), 0.1);
+input[type="number"]:focus,
+input[type="text"]:focus {
+  background-color: rgba(map-get($colors, contrast), 0.05);
 }
 
 input:focus {
@@ -22,13 +24,13 @@ input:focus {
   border-radius: 5px;
 }
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
@@ -90,7 +92,7 @@ select {
       background-color: white;
       width: map-get($space-sizes, large);
       height: calc(map-get($space-sizes, large));
-      content: '';
+      content: "";
     }
 
     /* Rounded sliders */
